# hard_coded_kv

./: Cargo.toml  README.md
example/swagger_example/: Cargo.toml  readme.md  swagger.yaml
example/swagger_example/src/: main.rs
example/swagger_example/swagger_macro/: Cargo.toml
example/swagger_example/swagger_macro/src/: lib.rs
src/: lib.rs
