[package]
name = "swagger_example"
version = "0.1.0"
authors = ["kotone-shiinoha <kotone.shiinoha@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_yaml = "0.8.13"

swagger_macro = { path = "./swagger_macro" }

